--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1465,7 +1465,7 @@ h4,
 h5,
 h6 {
   font-weight: 400;
-  color: #363636;
+  color: #2d283e;
 }
 
 h1 {
@@ -1892,7 +1892,7 @@ ul.actions li:first-child {
   line-height: 0.9em;
   font-size: 2.5em;
   margin: 0 0.25em 0 0.25em;
-  opacity: 0.35;
+  /* opacity: 0.35; */
   outline: 0;
   -moz-transition: opacity 0.25s ease-in-out;
   -webkit-transition: opacity 0.25s ease-in-out;
@@ -1915,7 +1915,7 @@ ul.actions li:first-child {
   left: 50%;
   bottom: -0.75em;
   margin-left: -0.5em;
-  border-bottom: solid 0em #ffffff;
+  border-bottom: solid 0em #564f6f;
   border-left: solid 0.5em transparent;
   border-right: solid 0.5em transparent;
   -moz-transition: border-bottom-width 0.25s ease-in-out;
@@ -2045,7 +2045,7 @@ body.is-preload #wrapper {
   position: relative;
   overflow: hidden;
   width: 100%;
-  background: #ffffff;
+  background: #564f6f;
   box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.25);
   -moz-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
   -webkit-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
